frontend/k8s/order-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      nodeSelector:
        role: backend
      containers:
      - name: order-service
        image: my1acr123.azurecr.io/order-service:4.0 
        ports:
        - containerPort: 3002
