frontend/k8s/product-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      nodeSelector:
        role: backend
      containers:
      - name: product-service
        image: my1acr123.azurecr.io/product-service:5.0
        ports:
        - containerPort: 3001
