frontend/k8s/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: logging
spec:
  type: ClusterIP        # <-- changed from LoadBalancer
  selector:
    app: kibana
  ports:
    - port: 5601
      targetPort: 5601
