frontend/k8s/order-ser-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-service
  ports:
    - port: 3002        # Service port inside cluster
      targetPort: 3002  # Container port
      nodePort: 31002   # Fixed port on Minikube IP
  type: NodePort        # Expose outside the cluster
